--- a/app/src/main/res/layout/activity_chat_adapter.xml
+++ b/app/src/main/res/layout/activity_chat_adapter.xml
@@ -4,24 +4,21 @@
     android:id="@+id/activity_chat_adapter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cnu.mobilesoftware.smartscheduler.Fragment.PostFragment$ChatAdapter"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/username"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textColor="@color/black"/>
     <TextView
         android:id="@+id/usercontent"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10dp"
+        android:textSize="20dp"
+        android:background="@drawable/othertalk"
         android:textColor="@color/black"/>
-
 </LinearLayout>
